--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maxium-scale=1.0, user-scalable=0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
   <title>管理员页面</title>
+  <link rel="icon" href="/src/assets/favicon.svg" sizes="any" type="image/svg+xml">
 </head>
 
 <body>
